--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "antd": "^5.24.5",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
