--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
+    "@tailwindcss/vite": "^4.1.11",
     "antd": "^5.24.5",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^6.30.0"
+    "react-router-dom": "^6.30.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
