--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
+    "lucide-react": "^0.532.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
