--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,15 +16,18 @@
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.532.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^6.30.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/file-saver": "^2.0.7",
+    "@types/leaflet": "^1.9.20",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
