--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__generator": "^7.27.0",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.28.0",
     "@types/file-saver": "^2.0.7",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^24.3.1",
