--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.532.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-qr-code": "^2.0.18",
     "react-router-dom": "^6.30.0",
