change sqlite to postgresql

--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,11 @@ LINE_ADMIN_USER_IDS=U19561848a44f4a60c0f264f40fde4507
 DASHBOARD_URL=https://hj211v7t-8000.asse.devtunnels.ms
 LIFF_ID=2007988584-qXzKOXWW
 LINK_SIGNING_SECRET=some-random-secret
+
+DB_HOST=localhost
+DB_USER=watermeter
+DB_PASSWORD=watermeter
+DB_NAME=waterdb
+DB_PORT=5432
+DB_TIMEZONE=Asia/Bangkok
+DB_SSLMODE=disable
